# foundation

./: README.md
algorithm/algs4/: .gitignore  README.md
algorithm/algs4/cpp/: CMakeLists.txt
algorithm/algs4/cpp/base/: array.h  bag.h  in.cc  in.h  indexminpq.h  iterable.h  minpq.h  queue.h  stack.h  unionfind.cc  unionfind.h
algorithm/algs4/cpp/graph/: digraph.cc  digraph.h  graph.cc  graph.h  graphs.h
algorithm/algs4/cpp/sort/: heapsort.h  insertion.h  mergesort.h  quicksort.h  selection.h  shellsort.h  sort.h
algorithm/algs4/cpp/tests/: array_tests.cc  bag_tests.cc  bipartite_tests.cc  breadthfirstpaths_tests.cc  cc_tests.cc  cycle_tests.cc  depthfirstorder_tests.cc  depthfirstpaths_tests.cc  digraph_tests.cc  directedcycle_tests.cc  directeddfs_tests.cc  graph_tests.cc  heapsort_tests.cc  indexminpq_tests.cc  insertion_sort_tests.cc  mergesort_bu_tests.cc  mergesort_tests.cc  minpq_tests.cc  queue_tests.cc  quickfind_tests.cc  quicksort_3way_tests.cc  quicksort_tests.cc  quickunion_tests.cc  selection_sort_tests.cc  shellsort_tests.cc  stack_tests.cc  uf_tests.cc
algorithm/algs4/python/base/: bag.py  queue.py  quickfind.py  quickunion.py  stack.py  weighted_quickunion.py
algorithm/design/: README.md
docs/: notes.md
language/python/fluent/: DataModel.ipynb
